# indicator-nameday

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  configure  configure.ac
data/: Makefile.am  indicator-nameday.desktop
data/db/: cs.holidays  cs.names  sk.holidays  sk.names
data/icons/: Makefile.am
debian/: README.Debian  README.source  changelog  control  copyright  files
po/: LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  cs.gmo  cs.po  sk.gmo  sk.po
src/: Makefile.am  indicator-nameday.vala
